Mbed TLS ChangeLog (Sorted per branch, date)

= Mbed TLS 3.6.1 branch released 2024-08-30

API changes
   * The experimental functions psa_generate_key_ext() and
     psa_key_derivation_output_key_ext() are no longer declared when compiling
     in C++. This resolves a build failure under C++ compilers that do not
     support flexible array members (a C99 feature not adopted by C++).
     Fixes #9020.

Default behavior changes
   * In a PSA-client-only build (i.e. MBEDTLS_PSA_CRYPTO_CLIENT &&
     !MBEDTLS_PSA_CRYPTO_C), do not automatically enable local crypto when the
     corresponding PSA mechanism is enabled, since the server provides the
     crypto. Fixes #9126.
   * A TLS handshake may now call psa_crypto_init() if TLS 1.3 is enabled.
     This can happen even if TLS 1.3 is offered but eventually not selected
     in the protocol version negotiation.
   * By default, the handling of TLS 1.3 tickets by the Mbed TLS client is now
     disabled at runtime. Applications that were using TLS 1.3 tickets
     signalled by MBEDTLS_ERR_SSL_RECEIVED_NEW_SESSION_TICKET return values now
     need to enable the handling of TLS 1.3 tickets through the new
     mbedtls_ssl_conf_tls13_enable_signal_new_session_tickets() API.

New deprecations
   * The experimental functions psa_generate_key_ext() and
     psa_key_derivation_output_key_ext() are deprecated in favor of
     psa_generate_key_custom() and psa_key_derivation_output_key_custom().
     They have almost exactly the same interface, but the variable-length
     data is passed in a separate parameter instead of a flexible array
     member.
   * The following cryptographic mechanisms are planned to be removed
     in Mbed TLS 4.0:
     - DES (including 3DES).
     - PKCS#1v1.5 encryption/decryption (RSAES-PKCS1-v1_5).
       (OAEP, PSS, and PKCS#1v1.5 signature are staying.)
     - Finite-field Diffie-Hellman with custom groups.
       (RFC 7919 groups remain supported.)