@@ -1,4 +1,4 @@
-PROJECT_NAME           = "Mbed TLS v3.6.1"
+PROJECT_NAME           = "Mbed TLS v3.6.2"
 OUTPUT_DIRECTORY       = ../apidoc/
 FULL_PATH_NAMES        = NO
 OPTIMIZE_OUTPUT_FOR_C  = YES
